welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: value % is not a member of java.awt.Color
      setCouleurBrosse(T(k+decalage)%getMondeHauteur())
                                    ^